--- a/基础物理/第 1 章、测量.md
+++ b/基础物理/第 1 章、测量.md
@@ -25,6 +25,8 @@
 
 我们通过学习如何测量物理学中的相关量来探索物理学。这些量包括长度、时间、质量、温度、压力和电流等。
 
+----------------- page 1 ---------------
+
 我们用各自的单位来测量每一个物理量，通过与**标准**的比较来进行。**单位**是我们为该物理量的度量赋予的唯一名称，例如，长度的单位为米（m）。标准则对应于该物理量的 1.0 个单位。正如你将看到的，长度的标准是光在真空中、在特定时间间隔内传播的距离，它正好对应于 1.0 米。我们可以以任何我们喜欢的方式定义一个单位及其标准。然而，重要的是以一种全世界科学家都认为合理且实用的方式进行定义。
 
 一旦我们设立了一个标准，比如长度的标准，我们就必须制定出可以将任何长度（无论是氢原子的半径、滑板的轴距，还是到某颗恒星的距离）用标准表示出来的程序。尺子作为我们长度标准的近似，给出了测量长度的一种方法。然而，许多比较必须是间接的。例如，你无法用尺子来测量原子的半径或恒星的距离。
@@ -49,6 +51,8 @@
 
 为了表示物理中经常遇到的非常大和非常小的量，我们使用 *科学记数法*，它采用 10 的幂。在这种记数法中：$$3\,560\,000\,000\, \text{m} = 3.56 \times 10^9 \, \text{m} \tag{1.1.2}$$以及$$
 0.000\,000\,492 \, \text{s} = 4.92 \times 10^{-7} \, \text{s}. \tag{1.1.3}$$在计算机上，科学记数法有时会变得更加简洁，如 $3.56\,\text{E}9$ 和 $4.92\, \text{E-7}$，其中 $\text{E}$ 代表“10 的指数”。在一些计算器上，$\text{E}$ 被替换为空格，表示更简短的形式。
+
+----------------- page 2 ---------------
 
 **表 1.1.2：** SI 单位前缀$^a$
 
@@ -84,6 +88,8 @@ $^a$ 加粗的前缀表示最常用的前缀
 
 1792 年，刚成立的法兰西共和国建立了一个新的度量衡系统，其核心单位是“米”。米被定义为从北极到赤道距离的千万分之一。然而，由于实际使用上的原因，这个基于地球的标准被放弃，米的定义变为两条刻在铂铱合金条近两端的细线之间的距离，这根“**标准米尺**”被保存在巴黎附近的国际计量局。精确的复制品被分发到世界各地的标准化实验室，这些**次级标准**用来生产更多、更易获得的标准，从而最终每一个测量设备都通过复杂的比较链条，源自这根标准米尺。
 
+----------------- page 3 ---------------
+
 随着时间的推移，人们需要比金属条上的细线间距更精确的标准。1960 年，米的标准被重新定义为基于光波长的标准。具体来说，米被定义为由氪-86（氪的一种同位素）原子在放电管中发出的特定橙红色光的 1650763.73 倍的波长。这个数字被精确选择，使得新标准尽量接近旧的米尺标准。
 
 到了 1983 年，精度需求进一步提升，甚至氪-86的标准也不再能满足要求，于是采取了一个大胆的措施：米被重新定义为光在特定时间间隔内在真空中传播的距离。根据第 17 届国际计量大会的定义：
@@ -115,6 +121,8 @@ $^a$ 加粗的前缀表示最常用的前缀
 
 不要将 *有效数字* 与 *小数位* 混淆。考虑长度 $35.6\,\text{mm}$、$3.56 \,\text{m}$ 和 $0.00356\, \text{m}$。它们都有三位有效数字，但小数位分别是一位、两位和五位。
 
+----------------- page 4 ---------------
+
 > [!example]
 > #### 样例问题 1.1.1 估算数量级，线球
 > 
@@ -143,6 +151,10 @@ $^a$ 加粗的前缀表示最常用的前缀
 
 时间有两个方面。在日常和一些科学目的上，我们想知道时间，以便按顺序安排事件。在许多科学工作中，我们则想知道一个事件持续了多长时间。因此，任何时间标准都必须能够回答两个问题：“它 *什么时候* 发生？”和“它的 *持续时间* 是多少？” 表 1.2.1 展示了一些时间间隔。
 
+任何重复的现象都可以作为时间标准。地球的自转决定了每天的长度，几百年来一直被用作标准；图 1.2.1 显示了基于地球自转的手表这一新颖的例子。石英钟中，石英环被持续震动，它可以通过天文观测与地球自转校准，并用于实验室中测量时间间隔。然而，这种校准精度并不能满足现代科学和工程技术的需求。
+
+----------------- page 5 ---------------
+
 **表 1.2.1：** 一些大致的时间间隔
 
 | 测量         | 时间间隔（秒）            | 测量                  | 时间间隔（秒）             |
@@ -163,7 +175,7 @@ $^a$ 加粗的前缀表示最常用的前缀
 ![[122.png]]
 **图 1.2.2：**  显示了 4 年间一天长度的变化。请注意，整个纵轴的总变化仅为 3 毫秒（= 0.003 秒）。
 
-任何重复的现象都可以作为时间标准。地球的自转决定了每天的长度，几百年来一直被用作标准；图 1.2.1 显示了基于地球自转的手表这一新颖的例子。石英钟中，石英环被持续震动，它可以通过天文观测与地球自转校准，并用于实验室中测量时间间隔。然而，这种校准精度并不能满足现代科学和工程技术的需求。
+
 
 为满足更精确时间标准的需求，原子钟被开发出来。位于科罗拉多州博尔德的美国国家标准与技术研究院（NIST）的原子钟是美国协调世界时（UTC）的标准。其时间信号可以通过短波无线电（WWV 和 WWVH 电台）和电话（303-499-7111）获取。时间信号（以及相关信息）也可以通过美国海军天文台的网站获取：https://www.usno.navy.mil/USNO/time。（如果要在你所在位置非常精确地校准时钟，你需要考虑这些信号到达你所需的时间。）
 
@@ -182,6 +194,8 @@ $^a$ 加粗的前缀表示最常用的前缀
 
 - 1.3.1 使用链式转换来更改质量单位。
 - 1.3.2 当质量均匀分布时，将密度与质量和体积联系起来。
+
+----------------- page 6 ---------------
 
 **主要概念：**
 
@@ -225,6 +239,8 @@ $$ 1 \, \text{u} = 1.660 \, 538 \, 86 \times 10^{-27} \, \text{kg}, \tag{1.3.1}$
 $$\rho = \frac{m}{V}. \tag{1.3.2}$$
 密度通常以千克每立方米或克每立方厘米列出。水的密度（1.00 克每立方厘米）常被用作比较。新雪的密度约为水的 $10\%$；铂的密度约为水的 21 倍。
 
+----------------- page 7 ---------------
+
 ## 1.4 回顾与总结
 
 **物理测量**：物理学基于对物理量的测量。某些物理量被选为基本量（如长度、时间和质量），每个都有一个标准和单位（如米、秒和千克）。其他物理量通过基本量及其标准和单位定义。
@@ -241,3 +257,5 @@ $$\rho = \frac{m}{V}. \tag{1.3.2}$$
 
 **密度**：材料的密度 $\rho$ 是单位体积的质量：$$
   \rho = \frac{m}{V}.$$
+
+
