--- a/基础物理/第 2 章、直线运动.md
+++ b/基础物理/第 2 章、直线运动.md
@@ -26,6 +26,8 @@
 
 物理学的一个目的是研究物体的运动——例如，它们移动得有多快，以及在给定时间内移动多远。NASCAR 的工程师对这一方面的物理学非常狂热，因为他们需要在比赛前和比赛期间确定赛车的性能。地质学家使用这些物理知识来测量构造板块的运动，以尝试预测地震。医学研究人员需要这些物理知识来绘制患者的血流图，以诊断部分闭塞的动脉，而驾车者则用它来确定当雷达探测器发出警报时如何减速。还有无数其他例子。在本章中，我们研究物体沿单一轴线运动的基本物理学。这种运动称为*一维运动*。
 
+----------------- page 13 ---------------
+
 ### 2.1.1 运动
 
 世界及其中的一切都在运动。即使是看似静止的事物，如道路，也随着地球的自转、地球绕太阳的轨道、太阳绕银河系中心的轨道以及银河系相对于其他星系的迁移而运动。运动的分类和比较（称为**运动学**）通常具有挑战性。究竟要测量什么，如何进行比较？
@@ -47,6 +49,8 @@
 \Delta x = x_2 - x_1 \tag{2.1.1}$$（符号 $\Delta$ 是希腊字母大写 Delta，表示数量的变化，意味着该数量的最终值减去初始值。）当数字代入方程 2.1.1 中的位置值 $x_1$ 和 $x_2$ 时，正方向（图 2.1.1 中向右）的位移总是正的，反方向（图中向左）的位移总是负的。例如，如果粒子从 $x_1 = 5 \, \text{m}$ 移动到 $x_2 = 12 \, \text{m}$，则位移为 $\Delta x = (12 \, \text{m}) - (5 \, \text{m}) = +7 \, \text{m}$。正结果表明往正方向运动。如果粒子从 $x_1 = 5 \, \text{m}$ 移动到 $x_2 = 1 \, \text{m}$，则 $\Delta x = (1 \, \text{m}) - (5 \, \text{m}) = -4 \, \text{m}$。负结果表明往负方向运动。
 
 实际行程中所覆盖的米数是无关紧要的；位移仅涉及初始和最终位置。例如，如果粒子从 $x = 5 \, \text{m}$ 移动到 $x = 200 \, \text{m}$，然后再回到 $x = 5 \, \text{m}$，则从开始到结束的位移为 $\Delta x = (5 \, \text{m}) - (5 \, \text{m}) = 0$。
+
+----------------- page 14 ---------------
 
 **_符号_**：位移的正号可以省略，但负号必须显示。如果忽略位移的符号（因此也忽略方向），剩下的是位移的**大小**（或绝对值）。例如，位移 $\Delta x = -4 \, \text{m}$ 的大小为 $4 \, \text{m}$。
 
@@ -72,6 +76,8 @@
 实际上，与“速度”相关的量有几个。其中之一是**平均速度**  $v_{\text{avg}}$，它是特定时间间隔 $\Delta t$ 内发生的位移 $\Delta x$ 与该时间间隔的比值：$$
 v_{\text{avg}} = \frac{\Delta x}{\Delta t} = \frac{x_2 - x_1}{t_2 - t_1} \tag{2.1.2}$$符号表示在时间 $t_1$ 时位置为 $x_1$，在时间 $t_2$ 时位置为 $x_2$。$v_{\text{avg}}$ 的常用单位是米每秒（$\text{m/s}$）。你可能会在问题中看到其他单位，但它们总是以长度/时间的形式出现。
 
+----------------- page 15 ---------------
+
 ***图形*** ： 在 $x$ 对 $t$ 的图上，平均速度 $v_{\text{avg}}$ 是连接 $x(t)$ 曲线上两个特定点的直线的**斜率**：一个点对应于 $x_2$ 和 $t_2$，另一个点对应于 $x_1$ 和 $t_1$。与位移类似，$v_{\text{avg}}$ 具有大小和方向（它是另一个矢量）。它的大小是直线斜率的大小。正的 $v_{\text{avg}}$（和斜率）表示直线向右上方倾斜；负的 $v_{\text{avg}}$（和斜率）表示直线向右下方倾斜。平均速度 $v_{\text{avg}}$ 总是与位移 $\Delta x$ 具有相同的符号，因为在方程 2.1.2 中 $\Delta t$ 总是正的。
 
 ![[214.png|600]]
@@ -79,6 +85,8 @@ v_{\text{avg}} = \frac{\Delta x}{\Delta t} = \frac{x_2 - x_1}{t_2 - t_1} \tag{2.
 
 图 2.1.4 展示了如何在图 2.1.3 中找到时间间隔 $t = 1 \, \text{s}$ 到 $t = 4 \, \text{s}$ 的 $v_{\text{avg}}$。我们画出连接时间间隔起点和终点在位置曲线上对应点的直线。然后我们找到直线的斜率 $\Delta x/\Delta t$。对于给定的时间间隔，平均速度为：$$
 v_{\text{avg}} = \frac{6 \, \text{m}}{3 \, \text{s}} = 2 \, \text{m/s}$$
+----------------- page 16 ---------------
+
 **平均速率** $s_{\text{avg}}$ 是描述粒子“移动速度”的另一种方式。平均速度涉及粒子的位移 $\Delta x$，而平均速率涉及总距离（例如，移动的米数），与方向无关；即：$$
 s_{\text{avg}} = \frac{\text{总距离}}{\Delta t} \tag{2.1.3}$$因为平均速率不包括方向，所以它没有代数符号。有时 $s_{\text{avg}}$ 与 $v_{\text{avg}}$ 相同（除了符号的缺失），但两者可能非常不同。
 
