--- a/未命名.md
+++ b/未命名.md
@@ -21,165 +21,219 @@
 
 ### 匀速和匀加速运动
 
+重要的是搞懂 位移-时间图（抛物线）；速度-时间图（斜线）；加速度-时间图（恒等水平线）
 
-（2. 10min）
-When it goes upwards, if you extend it downwards, I have introduced a new concept to you. The speed can be positive or negative. If I extend it outwards, extend it inwards, if I throw a ball, it will go upwards.
 
-In the beginning, dy dt is one meter per second.
+## 三、向量
+
+麦克斯韦特别强调了向量的重要性，但它的麦克斯韦方程式中使用的都是分量形式，并没有使用向量符号，很不好看。吉布斯（Gibbs）是一位美国物理学家。他无疑是 19 世纪最伟大的美国物理学家。或许与麦克斯韦相比，他会被归类为 19 世纪最重要的物理学家之一。他在耶鲁任教时，强调了向量的重要性。
+
+麦克斯韦并未使用矢量符号，因为他希望超越矢量，引入了一种更高级的数学量——四元数，这是由W·R·哈密顿于 1843 年发明的。哈密顿是一位伟大的数学家和物理学家。如果你阅读更高级的物理学内容，就会知道哈密顿-雅可比方程对量子力学的发展做出了巨大贡献。
+
+1853 年，哈密尔顿提出了一种数学结构，并将其命名为四元数。他对四元数的发明感到非常自豪。于是，在他去世后，人们在他生前常走的一座桥上发现了四元数。如今，这座桥的柱子上刻着四元数的代数公式。
+
+麦克斯韦非常钦佩汉密尔顿，也非常喜欢四元数。所以麦克斯韦觉得矢量还不够。他应该用四元数来表示整个物理学。于是他改用四元数。出于这个原因，他觉得向量还不够。他想进一步研究四元数，但未能取得进展。所以他没有把它打印出来。他也没有用矢量符号在文章中写下来。所以今天我们看到了一个现象。他的文章和著作都采用了分量表示法，而非矢量表示法。
+
+因此，后面受吉布斯影响，吉布斯不再使用四元数，而是使用向量表示法。因此，四元数逐渐发展，直到今天的向量表示法。那么，四元数应该被遗忘吗？关于这一点，有一个非常复杂的故事。这是我要讲述的故事。关于四元数和哈密顿的一些评论，请参阅我 1983 年出版的论文选集第 23 页。有一条关于四元数和哈密顿的评论。我要谈谈这个。物理学中的数字系统。
+
+在物理学中，我们讨论的量都是用实数来表示的。但直到 1926 年之前，物理学中只用实数。有人可能会说，在交流电中，如果你在中学学过交流电的方程，它使用了复数表示法。但在交流电理论中使用复数符号并非根本性的，只是为了数学上的便利。直到 1926 年，随着波动力学的建立，人们才清楚地认识到在量子力学中必须使用复数。所以在 1926 年，由于薛定谔的研究成果，人们清楚地认识到必须使用复数。你可以阅读我关于这段历史的论文。我有一篇文章已被翻译成中文。Page 636
+
+在那篇文章中，我描述了薛定谔如何在 1926 年发现波动方程。他是如何发现必须使用复数的呢？复数在波动力学中是固有的，无法消除。交流电中使用的复数性质有所不同。
+
+从实数到复数，这一概念最初是由数学家引入的。到了高斯时代，人们已经普遍认识到复数的存在是必然的。但在物理学中，直到 1926 年人们才意识到必须使用复数。然而当我们审视数字体系时，除了实数之外，还存在着复数。后来，四元数也被发现了。四元数是一种非常奇妙的代数。哈密尔顿最引以为豪的贡献就是他发现了四元数。麦克斯韦和哈密尔顿都曾试图将四元数应用于物理学中。
+
+换句话说，从今天的角度来看，既然我们知道物理学必须从实数走向复数，一个自然而然的问题就是：我们是否应该进一步走向四元数？这仍然是一个未解之谜。但关于这个问题，如果你查阅我的《论文选集》第 23 页，我的结论是：四元数尚未被引入物理学领域。
+
+虽然关于这个话题的文章很多，但都不太成功。不过我认为，在未来的 50 年里，这里的年轻人会发现四元数必须被引入物理学。
+
+$\vec{a} \cdot \vec{b}=|a||b|\cos \phi$
+
+$\vec{a} \times \vec{b} = |a||b|\sin \phi$，是平行四边形的面积
+
+（3.45）
+
+OK. I'll just do it like this. When you understand this diagram, you'll understand what I'm trying to say.
+
+That is, this thing is equal to. So we have proven the distributive law for vector product. I want you to review carefully that diagram, that complicated diagram, and understand that this proof thoroughly.
+
+OK. With that, we can now have a important formula. Algebraic formula for vector product.
+
+Namely, A cross B is equal to A X I plus A Y J plus A Z K cross B X I plus B Y J plus B Z K. And that's equal to. And now using the distributive law, we have nine terms. But I cross I. What is I cross I? Is zero because sine phi is zero.
+
+So all the I items are. So there are only cross products which are not zero. Now, I cross J right here.
+
+I cross J is equal to K. Obviously, I is the unit vector on X axis. J is the unit vector along Y axis. If you take the product, the lengths are both equal to one.
+
+The angle is 90 degrees. Sine phi is equal to one. So therefore, it becomes a unit vector along the Z axis.
+
+So I have this. And of course, the cyclic permutation J cross K is equal to I. K cross I is equal to J. Cyclic permutation. This is a common notation.
+
+CP is a cyclic permutation. That means that you write down this equation. And it's true also with the cyclic permutation.
+
+Cyclic permutation, meaning J replacing I, K replacing J, I replacing K in that order. OK, so now it becomes obvious that J cross K will give me I. So therefore, I get A Y B Z minus A Z B Y times I plus A Z B I B X. No, A Z B X minus A X B Z times J plus A X B Y minus A Y B X times K. So the line terms become six terms. And they are combined in this fashion, which is equal to a determinant.
+
+I have a tendency to underline I. Just forget about it. I don't need to underline. Right? That determinant, if you expand it.
+
+By the way, if you do not remember or have never studied the determinants, go back and study it. It's extremely important. And you have to be very familiar with the determinant.
+
+Now, according to the determinant, if you expand it according to the first row, because I times this two by two determinant, which is A Y B Z minus A Z B Y plus X like this. So we have now proven this formula, which is very important. By the way, we had earlier said A cross B is equal to minus B cross A. That is very obvious if you use this formula, because if you switch A and B, you are switching two rows, switching two rows of a determinant.
+
+Fundamental theorem is that it changes the sign of the determinant, et cetera. Take another one. What is A dot A cross B? If you do A dot A cross B, that means you remember a thought something.
+
+You take two vectors, you take the external component of this times, the X component of this plus the Y component of this times, the Y component of this Z component of this times the Z component of this. You add those three terms. So if you do it here, it is equivalent to replacing this I by if I now wanted the A dot A cross B. All I have to do is replace IJK by AXAYAZ.
+
+Then you get a determinant which has two rows which are identical. Another theorem says if you have a determinant with two rows identical, it's equal to zero. So that's another proof of A dot A cross B equal to zero.
+
+So is everything crystal clear? Am I going too fast or am I going too slow? OK, let's vote. Who wants to say I'm going too slow? Who wants to say I'm going too fast? Most people have no opinion. I think you are too shy.
+
+I assume that everybody has understood everything. If you have not completely understood it. OK, for those people who think that I'm going too fast, which particular point you want me to explain again? No, no, no, don't be shy.
+
+If you haven't understood anything, you can ask now. Or have you understood everything? Yes? I just see the last page of your paper. Last page.
+
+Which page? Thank you. I would like to ask, from this step to this step, is the proof at this time using this rectangle? Is it using the rectangle on the paper just now? Yes. Is it using this rectangle? Yes.
+
+Is it using this rectangle to prove that this is not a pass? Yes. Is it a clear opinion? Yes, it is very clear. This student asked me, just now... Do you need more money? No, no, no.
+
+Just now, in these few steps, how to prove it? By looking at this picture. The key point in this picture is the red parallelogram is the blue parallelogram enlarged by 90 degrees. If you have understood this concept, you can go back and look at this.
+
+Every step is correct. If you have any questions, you can go back and study it carefully. For example, if the length of A is equal to 1, then the red parallelogram is exactly the same as the blue one, but it is rotated by 90 degrees.
+
+Because every length is multiplied by 1, then it is equal to the original length. If A is equal to 2, then it is enlarged by 1. After you have understood this, you will know that every step is correct. OK, if you have no questions, if you have no questions, I will go back to the quaternion I just talked about.
+
+I think those of you who are interested in math will find what I am going to talk about very interesting. Because the number, as I just said, actually one starts with integers. Then, because one wants to divide, so one gets into fractions.
+
+But from fractions, we got into irrational numbers, namely all real numbers. Does everybody know when people began to realize that they are irrational numbers? Does anybody know whether there are more... A rational number is a fraction. A irrational number is a real number which cannot be written as a fraction.
+
+This is not the correct definition, but it is a definition that everybody would understand. Does anybody know are there more real numbers, are there more rational numbers, or are there more irrational numbers? Why? How do you know that there are more irrational numbers? This is a question which was only resolved in the 19th century. It follows a rule called the diagonal rule.
+
+If you read some popular mathematics books, it will explain to you, using the diagonal argument you can prove that there are many, many more irrational numbers than there are rational numbers. And that line of mathematical development became very, very important and became... that led to the science of mathematical logic. Mathematical logic was one of the most important subjects in mathematics around the beginning of the 20th century.
+
+And Hilbert, who was the greatest mathematician, perhaps with the Poincaré, the two greatest mathematicians around the year 1900, devoted much of his effort to mathematical logic. But does anybody know what happened to mathematical logic afterwards? Hilbert's program was proven to be impossible by a young Ph.D. candidate. Have you heard of this person's name? Good.
 
 (该文件长度超过30分钟。 在TurboScribe.ai点击升级到无限，以转录长达10小时的文件。)
 
 (转录由TurboScribe.ai完成。升级到无限以移除此消息。)
 
-Obviously, it is getting slower and slower. So the picture is like this. We will discuss this in the future.
+I think Godot not only is the greatest mathematical logician, one must agree that he is one of the greatest thinkers in the history of mankind because he proved that the kind of Hilbert project which wanted to put all mathematics along the style of Euclid's geometry is impossible. That caused a revolution in mathematical thinking. After that, there was a young British number theorist called Turing.
 
-Do you know this line? This Y, a ball is thrown up. This is T. Do you know what is the name of this line? It is called the bubble line. Parabola.
+And then there was von Neumann. Turing and von Neumann were working in mathematical logic. And this gave rise to a modern computer.
 
-We will talk about this later. So I want to tell you that when it is here, its speed is positive. Its dx dt is positive.
+And the influence of modern computers, of course, is something that I'm sure all of you realize. Von Neumann and Turing both made major contributions to this. For example, Turing invented the idea of a universal computer.
 
-At this point, its dx dt is zero. At this point, its dx dt is negative. Its instantaneous speed is positive here.
+What he proved is that all modern computers, if each of them has infinite memory, if you do not worry about time, then they are all equivalent. What can be done by one computer can be done by another computer. And can be done by his computer.
 
-It is zero here. It is negative here. Actually, you can understand it at a glance.
+His computer is called the Turing computer. And in order to honor him, there is an international prize called the Turing Prize. It is the highest award in software theory.
 
-When it goes up, its instantaneous speed is positive. At this point, when it is flat, its instantaneous speed is zero. At this point, its instantaneous speed is negative.
+And I'm very happy, and I'm sure you would be very happy, to know that Professor Yao Qizhi, Andy Yao, has now become a professor at Tsinghua. He won the Turing Prize a few years ago. It's equivalent to the Nobel Prize in software theory.
 
-You must be able to understand it to a degree that you know it at a glance. If I don't plot Y now, I plot its speed, its dy dt. Its instantaneous speed.
+And all of this follows a kind of a reasoning about the logic of mathematics and the definition of numbers. And if you follow that large argument, one branch would lead to the idea that there are real numbers, there are complex numbers, then the next one is called quaternions. It can be further proven.
 
-Its instantaneous speed, its dy dt, is one. At t equals zero, at t equals zero, its speed is one meter per second. But later on, it goes slower and slower.
+This proof is long but not difficult. I'm sure every one of you can understand it if it's explained to you in detail. Each of them is called a division algebra.
 
-At this point, its speed becomes zero. From this point to this point, it goes slower and slower. If you want to plot it, it is like this.
+A division algebra is an algebra like a complex number. The complex number system is a division algebra, meaning you can add, you can subtract, you can multiply, and you can divide by any number in that system which is not zero. For the real number system, you can certainly add, subtract, you can multiply, and you can divide provided the denominator is not zero.
 
-If you throw something away, its dy dt is a straight line. This is called constant acceleration. What is constant acceleration? At each point, there is a position.
+The complex number has the same property. So the complex number system also is a division algebra. It is proven that there is a third one, and only a third one, called quaternions.
 
-This is the position. This is the speed. The one below is acceleration.
+The quaternions system has a system of numbers. It's a generalization of complex numbers. And there you can add, subtract, and divide, multiply and divide, provided the denominator is not zero.
 
-The relation between speed and position is that speed is dy dt. The relation between acceleration and speed is that acceleration is dy dt. Speed is the derivative of position.
+And you can prove that there are no more. But there's a difference between complex number, real numbers and complex numbers, as contrasted with quaternions. Multiplication is commutative in complex numbers.
 
-Acceleration is the derivative of speed. Does everyone understand this? Yes. Is there anyone who doesn't understand? If you have a little problem with this, after the class, find a student who understands and explain it to you.
+a times b is equal to b times a in the complex number system. But a times b is not equal to b times a in the quaternion system. So real numbers and complex numbers are commutative in multiplication.
 
-This is the most basic concept. You have to become intuitive with this concept. At each point, its instantaneous velocity is dy dt.
+But quaternions are not commutative. In multiplication. Now in physics, originally every time you want to multiply two quantities, because they were real numbers or complex numbers, it's commutative.
 
-In fact, what I am telling you now is the most basic concept of calculus. If this motion is like this, at this point, its velocity is between this point and this point. What is its average velocity? Okay.
+But with quantum mechanics, we now know that quantum mechanics is based on algebra, which is not commutative. So after quantum mechanics was developed, physicists realized that you not only have to use real numbers, you have to use complex numbers. You not only have to deal with algebra, which is commutative, you have to deal with algebras, which are non-commutative.
 
-This is delta t. This is delta x. At this point, it is delta y. From here to here, the time is delta t because this is t. If it goes up, this is delta y. So its average velocity is delta y divided by delta t. What does this mean? If I draw a straight line here and it becomes a triangle. This triangle has this angle. This angle is called theta.
+Therefore, it became much more acceptable to imagine that perhaps the number system that we are using today needs to be broadened. Now after having told you so much about the quaternions, I think I need to give you a little bit of details about it, especially since we still have some time. A complex number system deals with a plus bi.
 
-This straight triangle, this side is delta y, this side is delta t. This angle is theta. So what is the relationship between delta y and delta t? What is the relationship with theta? It is tangent. This is what you learned in the triangle.
+A quaternion system deals with a plus bi plus cj plus dk. It has three imaginary numbers, i, j, k. The multiplication rules is i squared equal to j squared equal to k squared equal to minus one. i, j is equal to k is equal to minus ji, cyclic permutation.
 
-So if you draw a straight line, this angle is tangent theta. Okay. If I don't move this point and reduce this delta t, if I reduce it, I can't draw it clearly.
+This now defines the quaternion algebra. So you now know how to add and multiply. But the question is how to divide.
 
-The triangle is enlarged. If I reduce it, for example, if delta t is half, then it comes here. So it becomes like this.
+The theorem is this. Q, the inverse of Q, inverse of Q is the number which multiplied by Q, either in front or in the back, is equal to one. This is equal to, you see that this is very similar to complex numbers.
 
-If I try my best to reduce it to the end, I am asking a question. What does this line become? It is called tangent. What does tangent mean? If you draw this line, the further you go, the closer it becomes.
+With complex numbers, the inverse of a complex number is equal to the complex conjugate of that number divided by the absolute value squared of that number. This is just a generalization of that. So you might say that why did Hamilton choose only i, j, k? Why not just i, j? Why not i, j, kl? These need proofs.
 
-In the end, it becomes a tangent. So what is the limit of this? So, dy dt is equal to what? It is equal to tangent of which angle? It is the tangent of which angle? It is the tangent of which angle? Because this theta becomes the tangent. This concept, tangent of the angle between the tangent and the T-axis, this whole tangent is called slope.
+It turns out, for example, if you cut off and try to invent some rules for multiplication of i and j, you can prove that it would not work. It's only when you have three, that you have three imaginary numbers satisfying this rule, that this is a division algebra. This is a beautiful theorem, which is not proven by Hamilton.
 
-Why is it called slope? What does slope mean? Is it the slope? What is it in Chinese? Is it called slope? I use the word slope. If you go up a slope, that slope is called slope. The word slope in the order is tangent.
+Hamilton only invented this algebra and proved that you can divide. But later it was proven that if you want to have a division algebra, there are only three. There are the real number, complex number, and the quaternions.
 
-So if you see a line, draw this line, there is a curve at that point. The curve is the direction it is going at that time. The tangent between the t-axis and the curve is the derivative at that point.
+As to why there is the hope or the expectation that quaternions would enter into physics, I cannot give you any details, but if you read my selected papers, I think it's page 23, I have some comments about that. I assigned 12 exercises. I want you to hand them in next Monday.
 
-After you understand this, you will know that the movement is here. Because its theta is 20 degrees. If you go here, the theta becomes smaller, so the tangent becomes smaller.
+Do not, don't be late. I went faster than I thought I would. So I propose that we do the following.
 
-If you go here, the tangent is like this. If the tangent is like this, the theta becomes zero. So the tangent of theta is zero.
+I'll sit here and we'll stop the lectures, but you can individually come and ask me questions in the next half hour. Okay, goodbye. I hope you have no difficulties with your exercises.
 
-So at this point, the slope is zero. At this point, the slope becomes negative. Because the angle is going to the bottom.
+I distributed a new syllabus. I want to remind you of two things. First, it says material not covered by the book will not be included in the midterm nor in the final.
 
-So the theta becomes negative. So in fact, the concept of derivative is very simple. If there is a curve, the slope goes up at this point, so it is positive.
+Because some of the things I say are in the book and some are not. The part that is not in the book is not included in the two midterms. So if you are preparing for the midterms, don't be afraid that you don't fully understand the things other than what I say in the book.
 
-Its slope is positive. At this point, the slope is zero. At this point, the slope is negative.
+In this way, you can feel more at ease. Also, at the bottom of this page, I wrote something about some books that I would recommend. I recommend a book by James Jeans called The Mysterious Universe.
 
-At this point, the slope is zero. This slope is positive. This slope is zero.
+I think there is a Chinese translation of this book. The reason why I am telling you this is because last week, a student came to me and said that he read a book that he didn't understand. The book he showed me was called Green.
 
-It is negative. It is zero. And so on.
+It is a relatively new book. I told him not to read this kind of book. Because if you ask me about this kind of book, I think it is a misunderstanding.
 
-So you understand this. So this is the picture of location. The picture of location versus time.
+Because what it talks about is Green. Green is a professor at Columbia University. I think he is in his forties or fifties.
 
-This is its speed. So the speed at this point is positive. So it is positive.
+The direction he is going is what many young people are doing now. But this direction is now a hollow. It hasn't been implemented yet.
 
-At this point, the speed is zero. At this point, the speed becomes negative. So dy dt is the slope of this thing.
+And it is unlikely to be implemented in the future. But if a young person doesn't know this, I think the most likely phenomenon is that he is attracted to an unstable direction. This is very bad.
 
-The slope of this thing is always the same. Because its tangent is always in the same direction. So dy dt is a negative number.
+James Jeans is a great astrophysicist in the early 20th century. What is described in this book concerns the great revolutions of the beginning of the 20th century, namely special relativity, general relativity, and quantum mechanics. At the time that Jeans wrote the book, these were already revolutions which have materialized.
 
-And it is a fixed number. So it does not change for time. So the acceleration is this picture.
+他们已经现实化了。 These were revolutions that affected the history of mankind. 这个跟空中楼阁是完全不一样的。 所以你们在读这些书的时候应该有个取舍。 The other journal that I recommend is Scientific American. Scientific American 现在有中文的翻译。 You could read either the Chinese version or the English version.
 
-Do you understand the three pictures I just mentioned? If you don't understand this, I suggest that you find a classmate who will definitely understand. Before Galileo, everyone was not clear about the speed of a falling object. Why was it not clear at that time? For example, everyone knows that Galileo put down two things from the top of the Pisa tower.
+The Scientific American would have articles about the kind of thing that Mr. Green writes about. But most of it concerns more realistic and 不是空中楼阁的这种研究。 Much of it concerns biology, for example. I highly recommend this to you for the following reason.
 
-One is heavy and the other is light. This is true. So you have to ask if the two things fall to the bottom at the same time.
+The educational system in China tends to make students concentrated and just go into one direction. The educational system, especially in America, is the opposite. It has a tendency to want students to learn a lot of things.
 
-So before that, I think everyone outside China has an impression that the heavy object falls to the ground first and the light object falls to the ground later. It proves that it is not true. The two things fall to the ground at the same time.
+Both of them have advantages and disadvantages. But because you have been educated under the Chinese educational system, so you should perhaps absorb some of the advantages of the other system. 所以你如果是把你的视野放宽一点, it's good.
 
-So why did it have a wrong impression before? Someone will answer this question. No. Why did you have an impression that the heavy object fell to the ground first and the light object fell to the ground later? Because of the resistance of the air.
+If you start to read Scientific American, you will find that many of the articles you have difficulty understanding. Don't worry about that. Just keep on reading it.
 
-Because of the resistance of the air, if you use a very light object, if you use a very light balloon, it will fall very slowly. So of course it will fall to the ground later. So in the past, we didn't know the effect of the resistance of the air.
+And after you have read it for half a year, you would realize that many of the things that you at first do not understand, you now understand much better. And this is a way to learn. Because I have some appointment this afternoon, so this afternoon's consultation period from 4 to 5 is canceled.
 
-What Galileo did was that he used two different weights but they were both quite heavy. So the resistance of the air was not an important factor in his experiment. In this case, he proved that the two things fell to the ground at the same time.
+But I shall schedule it for tomorrow. But just for this week. 这个礼拜改成礼拜二。 OK, 底下我们讲第四章。 第四章是we discuss motions in two dimensions or three dimensions.
 
-So he proved that if the resistance of the air was not important, the object that fell to the ground would look like this. If you draw it as a position, it would be a parabola. If you draw it as a speed, it would be a constant speed.
+It's actually very similar to the problems of motion in one dimension. First, if you have a body which is moving in two dimensions like this, from this point to this point, there's a displacement. So there's a displacement, which is a vector.
 
-If you draw it as an acceleration, the acceleration would be a constant negative number. This was discovered only after Galileo. Today, of course, it is very easy to do this experiment.
+The coordinate of a particle would be designated by R. It's a vector in three dimensions. It's a three dimensional vector starting from some origin. So from this point to this point of the average velocity, average velocity is equal to the displacement divided by shijian.
 
-Because at that time, measuring time was quite complicated. Usually, if you want to put a ball on the ground, it will fall to the ground in a very short time, so it is very difficult to measure. Today, with a very simple method, you can measure it very accurately and you will know that the acceleration is indeed a constant.
+The displacement is a three dimensional vector. So this velocity is also a three dimensional vector. We can express R like this.
 
-And the number of accelerations, you have to look at the book and remember this number. Because this number is a very important number. Below, I want to talk about the rate, the rate of acceleration.
+Or you can write it as xi plus yj plus zk, where i, j, k are the three unit vectors along the x axis, y axis, and z axis. A right handed system. After we have the definition of the average velocity, we can have an instantaneous velocity.
 
-We need to discuss the rate of acceleration. Uniform acceleration motion. If at the beginning, its speed is V0, original velocity.
+Namely, we make this delta t smaller and smaller. Now, I'm going to draw a larger diagram. If delta t is this, the displacement is in this direction, so the average velocity is also in this direction.
 
-But, uniform acceleration means that for every unit of time, the velocity is increased by a certain amount, a. a is equal to uniform acceleration. Uniform means that it is uniform. Okay.
+It's equal to this vector divided by delta t. Now if I take a smaller delta t, I may be going this way. So this is a... This divided by the smaller delta t is the average velocity during this shorter period. If I now shrink delta t to zero, which direction would be the average velocity? Obviously it would become along the tangent direction.
 
-Now, if the original velocity is V0, what is the velocity after one second? What is the velocity after two seconds? Therefore, the velocity after T seconds is, you might say that is the definition. This is the definition of uniform acceleration motion. That is to say, the original velocity is V0, the final velocity is V, the final velocity is V, then the final velocity is equal to V0 plus a times T. This is the, you might say this is the definition of uniform motion.
+So we have the idea of instantaneous velocity. And that's equal to the limit. Of delta r over delta t, as delta t goes to zero.
 
-Okay. Do we know what is the distance traveled? What is the distance traveled in T? The distance traveled is X. I will not talk about Y now. I will talk about X. X minus X0.
+That's the definition of the instantaneous velocity. Usually that's just called velocity. Delta r, as delta t goes to zero, delta r becomes smaller and smaller.
 
-X0 is the original position. X is the later position. So X minus X0 is the distance traveled during the period P. This is easy to calculate because the initial velocity is V0.
+But delta t also becomes smaller and smaller. So the ratio, delta r over delta t, approaches a finite number. And that's what the...so this is the velocity.
 
-Final velocity is V0 plus a times T. This is initial velocity. This is final velocity. So what is the average velocity? Average velocity is the average of these two numbers.
+This is exactly similar to what we have discussed last time about motion in one dimension. There is very little difference. It's just that we write it as a three-dimensional vector.
 
-So it's V0 plus V0 plus a times T divided by two. That's average velocity. Average velocity times the time is the distance traveled.
+Of course, with this, we now have also the concept of average acceleration. Just a second. This, by definition, is equal to the derivative of r with respect to t. Such a limit is a derivative.
 
-Therefore, the distance traveled is equal to T times this quantity, which therefore is equal to... Does everybody understand what we just did? So now there are two important formulas. This is one formula. This is another formula.
+The instantaneous acceleration is equal to the next derivative. We shall have an explicit example of what this acceleration is. Next we talk about projectile motion.
 
-This formula gives you the final velocity. This formula gives you the distance traveled. This may sound very simple, but actually we have made an assumption.
+Projectile is the motion of a projectile. By definition, the acceleration, instantaneous acceleration, is equal to d squared r dt squared. So I take this r and take the derivative.
 
-The assumption is that it's a uniform acceleration. If it were not a uniform acceleration, this average velocity calculation is not correct. The reason that... No, the average velocity is always this.
+So I get d squared x dt squared i plus d squared y dt squared j plus d squared z dt squared k. In other words, the three components of the acceleration are separately calculated. The x component of the acceleration only relates to x as a function of t. x is a function of t. So a projectile comes out. Suppose this is the x-axis, this is the z-axis, this is the x-axis, this is the y-axis.
 
-The average velocity is always equal to... The average velocity... Can somebody tell me? If it were not a uniform acceleration, which step I just mentioned is incorrect? OK, let's review. If it were not a uniform velocity, and not a uniform acceleration, then this formula is incorrect. Because this formula is the definition of a uniform acceleration.
+The x-axis motion, x as a function of t, has nothing to do with y as a function of t or z as a function of t. So what is the characteristic of a projectile motion? The three components of the acceleration, only the z-axis has acceleration. The x-axis and the y-axis have no acceleration. Only the z-axis has acceleration.
 
-So this formula is incorrect from the beginning. And this formula is also incorrect. But the spirit of this formula says that the initial velocity plus the final velocity is divided by 2, which is the average velocity.
+So the definition of projectile motion is that this quantity is equal to negative g. It is equal to a unit vector in the z-direction multiplied by a negative g. So the reason for the negative is that we always take the x-axis to go upwards. So what does this represent? This represents d2x dt is equal to 0, d2y dt is equal to d2z. In other words, the x-axis has no acceleration.
 
-Is this correct? Who agrees that it's correct? Who disagrees that it's incorrect? It's incorrect. It's incorrect. Because... Anyway, if you think it's incorrect, then it's correct.
+The y-axis is the same. The z-axis is a uniform acceleration motion. d2x dt2 represents that the x-axis motion has no acceleration.
 
-Because it's a uniform acceleration, that's why it's correct. That's why there is this formula. OK.
+So what does dx dt represent? The acceleration in the x-axis is 0, which means that there is no acceleration. If there is no acceleration, it means that it is a uniform velocity. So dx dt is equal to constant.
 
-OK. For the following questions, so that you know whether you understand or not, I will give you a question. This question is... Use these two formulas.
+Constant means that it is a fixed constant. At this time, we can write it as xvx0. This is the velocity when the x-axis is at t equal to 0. Similarly, dy dt is equal to vy0.
 
-There are two formulas in the square. Use these two formulas to prove. Prove that it's V2 minus V02.
-
-With these two formulas, it's easy for you to prove this. You don't need to teach this topic. But if you do this exercise, you would understand the thing better.
-
-I think we are going faster than I originally thought we would go. So I will see whether you... The exercises that you are going to handle next Monday. Prove that you have no problem.
-
-If the exercise next Monday is not good, then we have to find another way. If it's good, then I think we can continue at this speed. In fact, there is little content in this book.
-
-If you know the source of the two formulas I just mentioned, and you know how to apply them, then you basically know everything in the second chapter. As I said before, at the end of every chapter, there is a review and summary. You should take a look at the review and summary.
-
-If you want to know if you fully understand that chapter, you should take a look at the review and summary. I hope as time goes on, you will understand my English better and better. As I said, these days English becomes a sort of an international language for science.
-
-So it would be very important for you to brush up your English as fast as possible. I have my office hours on the syllabus. Professor Ruan and Professor An also have their office hours.
-
-So if you have any questions, you can come to us. Okay, good luck. 9.8 meters per second square.
-
-I wrote a minus sign in front. If you take the axis to go upwards, if you take the axis to go downwards, of course it becomes a plus sign. So today we'll move on to vectors.
-
-In the handout I distributed to you, if you look at it, there is at the bottom, notes. I specifically talked about vectors. The concept of vectors is a very important concept.
-
-This concept was not particularly noticed before Maxwell. I'll read the notes to you. James Clerk Maxwell was the first physicist to emphasize the importance of vectors.
-
-The following diagram was from a paper he wrote called On the Mathematical Classification of Physical Quantities. You see the three diagrams there? On the left is convergence. Convergence means positive.
-
-The one in the middle is called curve. The one on the right is called convergence and curve. The term curve is still used today.
-
-It is a very important concept. Today's symbol is a triangular cross. Can this be abbreviated? Can this word be abbreviated? Let's talk about it next time.
-
-Convergence is no longer used today. Now the name is called divergence, which is the opposite of it. So at the beginning of Maxwell, we already knew that
+The acceleration of the z-axis is negative g. This means that the acceleration of each unit increases the velocity of the z-axis by negative g. So dz dt is equal to negative g.
 
 (该文件长度超过30分钟。 在TurboScribe.ai点击升级到无限，以转录长达10小时的文件。)
-
